@@ -224,7 +224,7 @@ void StreamCmdServer::connectToHost(const QString &hostname,uint16_t port)
   connect(cmd_pending_sockets[new_id],SIGNAL(connected()),
 	  cmd_pending_connected_mapper,SLOT(map()));
   connect(cmd_pending_sockets[new_id],
-	  SIGNAL(error(QAbstractSocket::SocketError)),
+	  SIGNAL(errorOccurred(QAbstractSocket::SocketError)),
 	  this,SLOT(pendingErrorData(QAbstractSocket::SocketError)));
   cmd_pending_connected_mapper->setMapping(cmd_pending_sockets[new_id],new_id);
   cmd_pending_sockets[new_id]->connectToHost(hostname,port);
@@ -304,7 +304,7 @@ void StreamCmdServer::collectGarbageData()
 	  connect(cmd_pending_sockets[pending_id],SIGNAL(connected()),
 		  cmd_pending_connected_mapper,SLOT(map()));
 	  connect(cmd_pending_sockets[pending_id],
-		  SIGNAL(error(QAbstractSocket::SocketError)),
+		  SIGNAL(errorOccurred(QAbstractSocket::SocketError)),
 		  this,SLOT(pendingErrorData(QAbstractSocket::SocketError)));
 	  cmd_pending_connected_mapper->
 	    setMapping(cmd_pending_sockets[pending_id],pending_id);
@@ -359,7 +359,7 @@ void StreamCmdServer::reconnectData()
       connect(cmd_pending_sockets[i],SIGNAL(connected()),
 	      cmd_pending_connected_mapper,SLOT(map()));
       connect(cmd_pending_sockets[i],
-	      SIGNAL(error(QAbstractSocket::SocketError)),
+	      SIGNAL(errorOccurred(QAbstractSocket::SocketError)),
 	      this,SLOT(pendingErrorData(QAbstractSocket::SocketError)));
       cmd_pending_connected_mapper->
 	setMapping(cmd_pending_sockets[i],i);
